--- a/Clinic_management/nbproject/private/private.properties
+++ b/Clinic_management/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.idw-gpl.jar=C:\\Users\\Admin\\Desktop\\clinic-management\\data\\idw-gpl.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\tun\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\DaiPhongPC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
